Fix deprecation warnings from Java 11