@@ -22,6 +22,7 @@ import org.broadinstitute.hellbender.utils.config.GATKConfig;
 
 import java.io.File;
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.ParameterizedType;
 import java.lang.reflect.Type;
 import java.nio.file.Files;
@@ -519,12 +520,12 @@ public final class FeatureManager implements AutoCloseable {
 
         for ( final Class<?> codecClass : DISCOVERED_CODECS ) {
             try {
-                final FeatureCodec<? extends Feature, ?> codec = (FeatureCodec<? extends Feature, ?>)codecClass.newInstance();
+                final FeatureCodec<? extends Feature, ?> codec = (FeatureCodec<? extends Feature, ?>)codecClass.getDeclaredConstructor().newInstance();
                 if ( codec.canDecode(featureFile.toAbsolutePath().toUri().toString()) ) {
                     candidateCodecs.add(codec);
                 }
             }
-            catch ( InstantiationException | IllegalAccessException e ) {
+            catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e ) {
                 throw new GATKException("Unable to automatically instantiate codec " + codecClass.getName());
             }
         }
